--- a/lab2-5sem/lab-2-5sem.ipynb
+++ b/lab2-5sem/lab-2-5sem.ipynb
@@ -11,53 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
-    "import simplex"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Матричная игра** с нулевой суммой задается прямоугольной матрицей, которая содержит стратегии 1ого игрока в строках и стратегии 2ого игрока в столбцах. Такая матрица однозначно определяет игру. Каждый элемент a[i][j] матрицы представляет собой сумму выигрыша, уплачиваемую игроком 1 игроку 2, если 1ый выбирает стратегию, соответствующую i-й строке, а 2ой выбирает стратегию, соответствующую j-му столбцу.\n",
-    "\n",
-    "**Чистые стратегии** - это возможные ходы игроков, выбираемые ими с вероятностью 1.\n",
-    "\n",
-    "**Нижняя чистая цена игры (максимин)** - \n",
-    "\n",
-    "**Верхняя чистая цена игры (минимакс)** - \n",
-    "\n",
-    "\n",
-    "**Смешанные стратегии** - "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Решение матричной игры\n",
-    "* Матрица игры может быть упрощена с помощью удаления **доминируемых стратегий**. Стратегия i игрока 1 **доминирует** стратегию j игрока 1 если для всех чистых стратегий игрока 2 его выигрыш при стратегии i больше или равен выигрышу при стратегии j. В таком случае стратегию j можно вычеркнуть, поскольку она точно не будет использована.\n",
-    "\n",
-    "* После упрощения у каждого игрока может остаться по одной стратегии - в таком случае решение игры найдено.\n",
-    "\n",
-    "* Чистые стратегии выбираются так, чтобы первый игрок максимизировал свой возможный выигрыш, а второй - минимизировал свой возможный проигрыш. Если для пары чистых стратегий минимакс и максимин совпадают, то эта пара стратегий - седловая точка игры, а максимин и минимакс - чистая цена игры. Данная игра является разрешимой в чистых стратегиях.\n",
-    "\n",
-    "* \n",
-    "\n",
-    "Согласно теореме фон Неймана, изменение всех значений матрицы на одно и то же число повлияет только на цену игры, но не на ее решение."
+    "import simplex__lab_1 as simplex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +32,9 @@
     "        self.matrix: np.array()\n",
     "        self.simplify_flag = 1\n",
     "        self.gamer = 'a'\n",
+    "        self.beta = 0\n",
+    "        self.optimal_a = []\n",
+    "        self.optimal_b = []\n",
     "\n",
     "    def load_data_from_json(self, filename: str) -> None:\n",
     "        with open(filename) as f:\n",
@@ -112,7 +81,7 @@
     "        return simplify_flag\n",
     "    \n",
     "    def solve(self):\n",
-    "        result = None#self.check_for_clean_strategies()\n",
+    "        result = self.check_for_clean_strategies()\n",
     "        if result is not None:\n",
     "            if result < 0:\n",
     "                if self.gamer == 'a':\n",
@@ -120,47 +89,166 @@
     "                else:\n",
     "                    self.gamer = 'a'\n",
     "                result = -result\n",
-    "            print(f\"Решение в чистых стратегиях: \\nигрок {self.gamer} победил с выигрышем {result}\")\n",
-    "            return self.gamer, result\n",
+    "            print(f\"Решение в чистых стратегиях: \\nигрок {self.gamer} победил, цена игры = {result}\")\n",
+    "            print(f\"Оптимальные чистые стратегии: \\nпервый игрок = {self.optimal_a}, второй игрок = {self.optimal_b}\")\n",
+    "        else:\n",
+    "            print(\"Оптимальные чистые стратегии: Нет таких\")\n",
+    "    \n",
+    "        # решение прямой задачи\n",
+    "        self._make_matrix_positive()\n",
+    "        transponent_matrix = self.matrix.T\n",
     "        \n",
-    "        print(\"Стратегии, оптимальные по Парето: \\n\", self.optimal_pareto())\n",
-    "        # else:\n",
-    "        #     print(\"Решения в чистых стратегиях не существует\")\n",
+    "        constraints = [{' coefs ': transponent_matrix[i].tolist() , ' type ': 'gte', ' b ': 1} for i in range(len(transponent_matrix))]\n",
+    "        data = {' f ': [1 for i in range(len(transponent_matrix[0]))] ,\n",
+    "                ' goal ': 'min' ,\n",
+    "                ' constraints ': constraints}\n",
+    " \n",
+    "        with open('simplex_data.json', 'w') as file:\n",
+    "            json.dump(data, file)\n",
+    "\n",
+    "        task_x = simplex.LinearTask()\n",
+    "        task_x.load_data_from_json('simplex_data.json')\n",
+    "        teta_x, x_ = task_x.solve()\n",
+    "\n",
+    "        # решение двойственной задачи\n",
+    "        constraints = [{' coefs ': self.matrix[i].tolist() , ' type ': 'lte' , ' b ': 1} for i in range(len(self.matrix))]\n",
+    "        data = {' f ': [1 for i in range(len(self.matrix[0]))] ,\n",
+    "                ' goal ': 'max' ,\n",
+    "                ' constraints ': constraints}\n",
+    " \n",
+    "        with open('simplex_data.json', 'w') as file:\n",
+    "            json.dump(data, file)\n",
+    "\n",
+    "        task_y = simplex.LinearTask()\n",
+    "        task_y.load_data_from_json('simplex_data.json')\n",
+    "        teta_y, y_ = task_y.solve()\n",
     "        \n",
-    "    def optimal_pareto(self):\n",
-    "        return 'a'\n",
+    "        strategies_x = np.array(x_)/teta_x\n",
+    "        strategies_y = np.array(y_)/teta_y\n",
+    "\n",
+    "        print(f'Стратегия первого игрока: {strategies_x},\\n Стратегия второго игрока: {strategies_y}')\n",
+    "\n",
+    "        print(f'Цена игры: {1/teta_x - self.beta}')\n",
+    "\n",
+    "    \n",
+    "    def _make_matrix_positive(self):\n",
+    "        self.beta = np.amin(self.matrix)\n",
+    "        self.matrix = np.add(self.matrix, self.beta)\n",
     "\n",
     "    def check_for_clean_strategies(self):\n",
     "        if len(self.matrix) == 1 and len(self.matrix[0]) == 1:\n",
     "           return self.matrix[0][0]\n",
     "        \n",
-    "        self.minimax = min([max([self.matrix[i][j] for i in range(len(self.matrix))]) for j in range(len(self.matrix[0]))])\n",
-    "        self.maximin = max([min([self.matrix[i][j] for j in range(len(self.matrix[i]))]) for i in range(len(self.matrix))])\n",
+    "        row = []\n",
+    "        for j in range(len(self.matrix[0])):\n",
+    "            column = [self.matrix[i][j] for i in range(len(self.matrix))]\n",
+    "            i = column.index(max(column))\n",
+    "            row.append(max(column))\n",
+    "        j = row.index(min(row))\n",
+    "        self.minimax = self.matrix[i][j]\n",
     "\n",
-    "        print(self.maximin, self.minimax)\n",
+    "        column = []\n",
+    "        for i in range(len(self.matrix)):\n",
+    "            row = [self.matrix[i][j] for j in range(len(self.matrix[0]))]\n",
+    "            j = row.index(min(row))\n",
+    "            column.append(min(row))\n",
+    "        i = column.index(max(column))\n",
+    "        self.maximin = self.matrix[i][j]\n",
+    "        print(\"Maximin: \", self.maximin, \"\\nMinimax: \", self.minimax)\n",
     "\n",
-    "        if self.maximin == self.maximin:\n",
+    "        if self.maximin == self.minimax:\n",
+    "            self.optimal_a, self.optimal_b = self.matrix[i], [self.matrix[i_][j] for i_ in range(len(self.matrix))]\n",
     "            return self.minimax"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Примеры результатов"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Стратегии, оптимальные по Парето:\n",
-      " a\n"
+      "Maximin:  2 \n",
+      "Minimax:  3\n",
+      "Оптимальные чистые стратегии: Нет таких\n",
+      "Стратегия первого игрока: [0.2 0.8],\n",
+      " Стратегия второго игрока: [0.6 0.4]\n",
+      "Цена игры: 2.4000000000000004\n"
      ]
     }
    ],
    "source": [
     "game = Game()\n",
-    "game.load_data_from_json(\"data.json\")\n",
-    "game.solve()\n"
+    "game.load_data_from_json(\"example.json\")\n",
+    "game.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximin:  8 \n",
+      "Minimax:  7\n",
+      "Оптимальные чистые стратегии: Нет таких\n",
+      "Стратегия первого игрока: [0.         0.33333333 0.66666667],\n",
+      " Стратегия второго игрока: [0.33333333 0.66666667]\n",
+      "Цена игры: 6.666666666666673\n"
+     ]
+    }
+   ],
+   "source": [
+    "game = Game()\n",
+    "game.load_data_from_json(\"example1.json\")\n",
+    "game.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximin:  6 \n",
+      "Minimax:  6\n",
+      "Решение в чистых стратегиях: \n",
+      "игрок a победил, цена игры = 6\n",
+      "Оптимальные чистые стратегии: \n",
+      "первый игрок = [7, 6, 8, 9], второй игрок = [5, 4, 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('a', 6)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game = Game()\n",
+    "game.load_data_from_json(\"example2.json\")\n",
+    "game.solve()"
    ]
   }
  ],
